Fix broken collapsable navbar element

--- a/application/css/DarkStyle.css
+++ b/application/css/DarkStyle.css
@@ -47,7 +47,6 @@ html * {
 
 .navbar {
 	background-color: var(--container-dark) !important;
-	height: 7vh;
 	width: 100%;
 	margin-bottom: 1%;
 	box-shadow: 0 0 10px 10px var(--box-shadow);
